Revision history for Perl extension Module::Build.

0.42_19 - 

  - Skip PPM test when link_executable fails [Leon Timmermans]

0.4218 - Sun Apr 24 16:39:47 BST 2016

  - Skip XS test when link_executable fails

0.42_17 - Mon Mar 21 14:02:06 CET 2016

  - Read extra_linker_flags using its accessor [Salvador Fandino]

  - Convert win shell splitting to m//gc parser, fixing handling of 0
    and handling of backslashes preceeding a double quote [Graham Knop]

  - Win32 installation of MB with gmake require SHELL env var to be set
    [bulk88]

0.4216 - Wed Jan 20 10:39:27 CET 2016

  - Delete test that fails with new version.pm [Leon Timmermans]

0.42_15 - Sat Nov 28 15:17:40 CET 2015

  - Honor environmental variables when using TAP::Harness directly [Leon Timmermans]

  - Reintroduce some level of perl 5.6 support [Leon Timmermans]
    Note that this comes with no guarantees or commitment

  - Allow Devel::Cover usage with TAP::Harness [Philipp Gortan]

  - Remove "running under some shell" [Shoichi Kaji]

  - Fix cookbook - code was missing trailing ` [Matthew Horsfall]

0.4214 - Fri Jun 12 00:25:00 CEST 2015

  - Released 0.42_13 as 0.4214

0.42_13 - Sat Jun  6 21:18:24 CEST 2015

  [BUG FIXES]

  - Handle failure to guess license from key better

  [ENHANCEMENTS]

  - Output data in a stable order [Jérémy Bobbio]

0.4212 - Sun May 17 00:33:34 CEST 2015

  [BUG FIXES]

  - Revert "Stop using version->normal(); prefer stringify()"

0.4211 - Tue Jan 20 01:33:42 CET 2015

  [BUG FIXES]

  - Fix t/actions/installdeps.t to work on "perl in space" [Ed J]

  - Stop using version->normal(); prefer stringify() [John Peacock]

  [DEPRECATIONS]

  - inc::latest has been split out to a separate distribution on CPAN.
    It is an optional prerequisite, only needed for the experimental
    bundling feature.

0.4210 - Mon Sep  1 13:30:29 CEST 2014

  [BUG FIXES]

  - Fixup CPAN::Meta dependency

  - Handle old releases of CPAN::Meta more gracefully.
